--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
-    "selenium-webdriver": "^4.24.0"
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.x",
